--- a/info.yaml
+++ b/info.yaml
@@ -1,10 +1,10 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
   wokwi_id:     419323243133324289       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        "prueba 1"      # Project title
-  author:       "byron castro"      # Your name
-  discord:      "byron"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "prueba uno "      # One line description of what your project does
+  title:        "SUMADOR DE 8 BITS"      # Project title
+  author:       "BYRON DE LA CRUZ "      # Your name
+  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "SUMADOR DE 8 BITS"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -16,29 +16,29 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: "input 1"
-  ui[1]: "input 2"
-  ui[2]: "input 3"
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "OPERADOR A"
+  ui[1]: "OPERADOR A"
+  ui[2]: "OPERADOR A"
+  ui[3]: "OPERADOR A"
+  ui[4]: "OPERADOR B"
+  ui[5]: "OPERADOR B"
+  ui[6]: "OPERADOR B"
+  ui[7]: "OPERADOR B"
 
   # Outputs
-  uo[0]: "out 1"
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: "out 1"
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "LED 0"
+  uo[1]: "LED 1"
+  uo[2]: "LED 2"
+  uo[3]: "LED 3"
+  uo[4]: "LED 4"
+  uo[5]: "LED 5"
+  uo[6]: "LED 6"
+  uo[7]: "LED 7"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
+  uio[0]: "SEL 1"
+  uio[1]: "SEL 1"
+  uio[2]: "SEL 1"
   uio[3]: ""
   uio[4]: ""
   uio[5]: ""
